@@ -1,18 +1,5 @@
 package com.hm.picplz.domain.auth.jwt;
 
-import io.jsonwebtoken.*;
-import io.jsonwebtoken.io.Decoders;
-import io.jsonwebtoken.security.Keys;
-import org.springframework.beans.factory.InitializingBean;
-import org.springframework.beans.factory.annotation.Value;
-import org.springframework.data.redis.core.RedisTemplate;
-import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
-import org.springframework.security.core.Authentication;
-import org.springframework.security.core.GrantedAuthority;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
-import org.springframework.security.oauth2.core.user.DefaultOAuth2User;
-import org.springframework.stereotype.Component;
-
 import java.security.Key;
 import java.util.Arrays;
 import java.util.Collection;
@@ -20,6 +7,26 @@ import java.util.Date;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 
+import org.springframework.beans.factory.InitializingBean;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.data.redis.core.RedisTemplate;
+import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.stereotype.Component;
+
+import io.jsonwebtoken.Claims;
+import io.jsonwebtoken.ExpiredJwtException;
+import io.jsonwebtoken.Jwts;
+import io.jsonwebtoken.MalformedJwtException;
+import io.jsonwebtoken.SignatureAlgorithm;
+import io.jsonwebtoken.UnsupportedJwtException;
+import io.jsonwebtoken.io.Decoders;
+import io.jsonwebtoken.security.Keys;
+import lombok.extern.slf4j.Slf4j;
+
+@Slf4j
 @Component
 public class JwtTokenProvider implements InitializingBean {
 
@@ -48,21 +55,19 @@ public class JwtTokenProvider implements InitializingBean {
         this.key = Keys.hmacShaKeyFor(keyBytes);
     }
 
-    public JwtTokenResponseDto generateTokenDto(Authentication authentication, String loginType) {
+    public JwtTokenResponseDto generateTokenDto(Authentication authentication) {
 
         // 권한들 가져오기
         String authorities = authentication.getAuthorities().stream()
                 .map(GrantedAuthority::getAuthority)
                 .collect(Collectors.joining(","));
+        String memberId = String.valueOf(authentication.getPrincipal());
 
         // 토큰의 expire 시간을 설정
         long now = (new Date()).getTime();
         Date accessExprTime = new Date(now + this.accessTokenValidityInMilliseconds);
         Date refreshExprTime = new Date(now + this.refreshTokenValidityInMilliseconds);
 
-        DefaultOAuth2User defaultOAuth2User = (DefaultOAuth2User) authentication.getPrincipal();
-        Object memberId = defaultOAuth2User.getAttributes().get("memberNo");
-        Object provider = defaultOAuth2User.getAttributes().get("provider");
 
         String accessToken = Jwts.builder()
                 .setSubject(String.valueOf(memberId))
@@ -79,7 +84,7 @@ public class JwtTokenProvider implements InitializingBean {
                 .compact();
 
         redisTemplate.opsForValue().set(
-                "token : " + String.valueOf(memberId),
+                "token : " + memberId,
                 refreshToken,
                 refreshTokenValidityInMilliseconds,
                 TimeUnit.MILLISECONDS
@@ -105,7 +110,7 @@ public class JwtTokenProvider implements InitializingBean {
         Collection<? extends GrantedAuthority> authorities =
                 Arrays.stream(claims.get(AUTHORITIES_KEY).toString().split(","))
                         .map(SimpleGrantedAuthority::new)
-                        .collect(Collectors.toList());
+                        .toList();
 
         Long memberId = Long.valueOf(claims.getSubject());
 
@@ -118,17 +123,13 @@ public class JwtTokenProvider implements InitializingBean {
             Jwts.parserBuilder().setSigningKey(key).build().parseClaimsJws(token);
             return true;
         } catch (io.jsonwebtoken.security.SecurityException | MalformedJwtException e) {
-            e.printStackTrace();
-            System.out.println("잘못된 JWT 서명입니다.");
+            log.error("잘못된 JWT 서명입니다.");
         } catch (ExpiredJwtException e) {
-            e.printStackTrace();
-            System.out.println("만료된 JWT 토큰입니다.");
+            log.error("만료된 JWT 토큰입니다.");
         } catch (UnsupportedJwtException e) {
-            e.printStackTrace();
-            System.out.println("지원되지 않는 JWT 토큰입니다.");
+            log.error("지원되지 않는 JWT 토큰입니다.");
         } catch (IllegalArgumentException e) {
-            e.printStackTrace();
-            System.out.println("JWT 토큰이 잘못되었습니다.");
+            log.error("JWT 토큰이 잘못되었습니다.");
         }
         return false;
     }
